tdf#91431 - fix post-dispose focus issue in color window.

Change-Id: I7990cbddc8c664da5ec6521cf8e036ca67d5ce0e